# CvExtractor-Webapp

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  docker-compose.yml  main.py  output.xlsx  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  setup.sh  wsgi.py
.github/workflows/: ci.yml  deploy.yml
app/: __init__.py  config.py  extractor.py  models.py  routes.py  shell.py  workbook.py
app/static/css/: main.css
app/static/js/: main.js
app/templates/: index.html
templates/: index.html
tests/: conftest.py  test_extractor.py  test_routes.py
