[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "cv-extractor"
version = "0.2.0"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0,<4.0",
    "flask-wtf>=1.2,<2.0",
    "python-dotenv>=1.0,<2.0",
    "pypdf>=4.0,<6.0",
    "python-docx>=1.1,<2.0",
    "openpyxl>=3.1,<4.0",
    "gunicorn>=22.0,<24.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.4,<1.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
